--- a/src/css/location.css
+++ b/src/css/location.css
@@ -318,15 +318,15 @@
 }
 
 .location-modal {
-  display: none; 
-  position: fixed; 
-  z-index: 10; 
+  display: none;
+  position: fixed;
+  z-index: 10;
   padding-top: 100px;
   left: 0;
   top: 0;
-  width: 100%; 
-  height: 100%; 
-  overflow: auto; 
+  width: 100%;
+  height: 100%;
+  overflow: auto;
   background-color: rgba(0, 0, 0, 0.4);
   animation: fadeIn 0.4s ease-in-out;
 }
@@ -335,6 +335,7 @@
   from {
     opacity: 0;
   }
+
   to {
     opacity: 1;
   }
@@ -403,7 +404,7 @@ a.linkLabel.incubators {
 }
 
 .location-modal-close {
-  color: #aaaaaa;
+  color: #aaa;
   float: right;
   font-size: 28px;
   font-weight: bold;
