finishing touches for location and feedback

--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -6,6 +6,7 @@
   --color-green-reflex: #7ecb13;
   --color-green-darker: #599900;
   --color-primary-plum: #652445;
+  --color-primary-plum-light: #e27caf;
   --color-primary-gold: #f6c34d;
   --color-primary-light-gold: #ffd87e;
   --color-primary-light-grey: #f6f6f6;
