--- a/src/partials/feedback.hbs
+++ b/src/partials/feedback.hbs
@@ -21,6 +21,22 @@
         </a>
     </div>
 {{/if}}
+
+{{#if (eq page.layout 'incubate')}}
+    <div id="feedback-incubate">
+        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        Feedback
+        </a>
+    </div>
+{{/if}}
+
+{{#if (eq page.layout 'cloud')}}
+    <div id="feedback-cloud">
+        <a href="https://jira.magnolia-cms.com/secure/CreateIssueDetails!init.jspa?pid=10190&issuetype=4" target="_blank" rel="noopener">
+        Feedback
+        </a>
+    </div>
+{{/if}}
  
 {{#if (eq page.layout 'headless')}}
     <div id="feedback-headless">
