--- a/src/css/feedback.css
+++ b/src/css/feedback.css
@@ -129,6 +129,97 @@
   font-weight: bolder;
 }
 
+/* Legacy Cloud feedback label */
+
+#feedback-cloud {
+  height: 3.35rem;
+  width: 5.9rem;
+  position: fixed;
+  top: 50%;
+  right: -0.56rem;
+  z-index: 400;
+  margin: -2rem;
+  margin-left: 0.5rem;
+  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  /* filter: progid:dximagetransform.microsoft.basicimage(rotation=3); */
+  padding-top: 5px;
+  padding-left: 0.9rem;
+  display: block;
+  background: var(--color-primary-plum);
+  /* border-radius: 50%; */
+  /* border-radius: 8px; */
+  font-family: inherit;
+  font-size: 1rem;
+  color: whitesmoke;
+  /* border: 1px solid whitesmoke; */
+  transition: all 0.275s ease-in-out;
+}
+
+#feedback-cloud a {
+  text-decoration: none;
+  font-weight: 300;
+  color: whitesmoke;
+}
+
+#feedback-cloud:hover {
+  background-color: var(--color-primary-green);
+  box-shadow: 3px 5px 7px -3px darkslategrey;
+  border: transparent;
+  transform: rotate(-90deg) translateY(-0.2rem);
+  font-weight: bolder;
+}
+
+/* Incubator feedback label */
+
+#feedback-incubate {
+  height: 3.35rem;
+  width: 6rem;
+  position: fixed;
+  top: 50%;
+  right: -0.56rem;
+  z-index: 400;
+  margin: -2rem;
+  margin-left: 0.5rem;
+  transform: rotate(-90deg);
+  -webkit-transform: rotate(-90deg);
+  -moz-transform: rotate(-90deg);
+  -o-transform: rotate(-90deg);
+  /* filter: progid:dximagetransform.microsoft.basicimage(rotation=3); */
+  padding-top: 5px;
+  padding-left: 0.9rem;
+  display: block;
+  background: lightgrey;
+  /* border-radius: 50%; */
+  /* border-radius: 8px; */
+  font-family: inherit;
+  font-size: 1rem;
+  color: black;
+  /* border: 1px solid whitesmoke; */
+  transition: all 0.275s ease-in-out;
+}
+
+#feedback-incubate a {
+  text-decoration: none;
+  font-weight: 300;
+  color: black;
+}
+
+#feedback-incubate:hover {
+  background-color: var(--color-primary-green);
+  box-shadow: 3px 5px 7px -3px darkslategrey;
+  border: transparent;
+  transform: rotate(-90deg) translateY(-0.2rem);
+  font-weight: bolder;
+  color: whitesmoke;
+}
+
+#feedback-incubate:hover a {
+  color: whitesmoke;
+}
+
 /* Headless feedback label */
 
 #feedback-headless {
