location modal updates

--- a/src/partials/location.hbs
+++ b/src/partials/location.hbs
@@ -49,7 +49,7 @@
   <div class="location-modal-content">
     <span class="location-modal-close">&times;</span>
     <h2>Location <i class="fa fa-map-marker" aria-hidden="true"></i></h2>
-    <p>This wee widget just lets you know <strong>where</strong> you are on the docs site.</p>
+    <p>This widget lets you know where you are on the docs site.</p>
     <p>You are currently perusing through the <span class="currentLocation">{{page.component.title}}</span> docs.</p>
     <h3>All doc sections:</h3>
     <a href="{{{siteRootPath}}}/welcome/index.html" class="linkLabel dxCore">DX Core</a>
