location and hide nav explore

--- a/src/partials/location.hbs
+++ b/src/partials/location.hbs
@@ -51,7 +51,7 @@
     <h2>Location <i class="fa fa-map-marker" aria-hidden="true"></i></h2>
     <p>This widget lets you know where you are on the docs site.</p>
     <p>You are currently perusing through the <span class="currentLocation">{{page.component.title}}</span> docs.</p>
-    <h3>All doc sections:</h3>
+    <h3>Main doc sections</h3>
     <a href="{{{siteRootPath}}}/welcome/index.html" class="linkLabel dxCore">DX Core</a>
     <a href="{{{siteRootPath}}}/headless/index.html" class="linkLabel headless">Headless</a>
 {{#if (eq page.layout 'saas')}}
