--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -192,7 +192,7 @@ html.is-clipped--nav {
 
 .nav-panel-explore {
   background: var(--color-smoke-50);
-  display: flex;
+  display: none;
   flex-direction: column;
   position: absolute;
   right: 0;
