location update for saas

--- a/src/css/location.css
+++ b/src/css/location.css
@@ -493,6 +493,13 @@
   }
 }
 
+@media screen and (max-width: 1551px) {
+  .location-modal-content {
+    width: 65%;
+    margin-bottom: 2rem;
+  }
+}
+
 a.linkLabel {
   padding: 10px;
   transition: 0.3s ease-in-out;
