--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -1458,7 +1458,6 @@ button.clipboard i {
 }
 
 .inlineBean {
-  color: var(--color-green-darker) !important;
+  color: black !important;
   font-family: monospace !important;
-  font-weight: bold;
 }
