do not show search icon on mobile; automatic on phones

--- a/src/css/search.css
+++ b/src/css/search.css
@@ -154,6 +154,10 @@ nav.saas-nav #searchBar.ds-input:focus {
     display: none;
   }
 
+  .search-input-wrapper__icon {
+    display: none;
+  }
+
   .algolia-autocomplete .ds-dropdown-menu [class^=ds-dataset-] {
     overflow: scroll !important;
     width: 90vw;
