--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -6,7 +6,8 @@
 
 {{> initBeforeAfter}}
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script>
+{{!-- <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/docsearch.js@2/dist/cdn/docsearch.min.js"></script> --}}
+<script src="https://cdn.jsdelivr.net/npm/@docsearch/js@3"></script>
 
 {{#if (eq page.layout 'headless')}}
 <script type="text/javascript">
@@ -138,8 +139,8 @@
         appId: 'IIQKXJ786V',
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'dev_DOCS',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
+        container: '#searchBar',
+        searchParameters: { hitsPerPage: 12 },
         debug: true // prevent it from closing on inspection.
     });
 
