--- a/src/partials/search.hbs
+++ b/src/partials/search.hbs
@@ -10,10 +10,10 @@
 </style>
 
 <div class="search-input-wrapper">
-  <input type="search" placeholder="" name="search" id="searchBar">
-  <span class="search-input-wrapper__icon">
+  <button type="search" placeholder="" name="search" id="searchBar">
+  {{!-- <span class="search-input-wrapper__icon">
     <p><i class="fa fa-search" aria-hidden="true"></i> <kbd>/</kbd></p>
-  </span>
+  </span> --}}
 </div>
 
 <script>
