--- a/src/css/base.css
+++ b/src/css/base.css
@@ -213,4 +213,37 @@ button::-moz-focus-inner {
     width: 70vw !important;
   }
 }
+
+form.DocSearch-Form {
+  box-shadow: 1px 1px 6px -1px var(--color-primary-green) !important;
+  margin-bottom: 5px !important;
+}
+
+form.DocSearch-Form svg {
+  color: var(--color-primary-green) !important;
+}
+
+.DocSearch-Modal button.DocSearch-Cancel {
+  color: var(--color-primary-green) !important;
+}
+
+footer.DocSearch-Footer svg {
+  color: var(--color-primary-green) !important;
+}
+
+footer.DocSearch-Footer div.DocSearch-Logo a {
+  color: var(--color-primary-green) !important;
+}
+
+.DocSearch-Dropdown li.DocSearch-Hit#docsearch-item-0 a {
+  background-color: var(--color-primary-green) !important;
+}
+
+.DocSearch-Hits .DocSearch-Hit-source {
+  color: var(--color-primary-green) !important;
+}
+
+.DocSearch-Hits mark {
+  color: var(--color-primary-green) !important;
+}
 /* } */
