update different layouts

--- a/src/partials/footer-scripts.hbs
+++ b/src/partials/footer-scripts.hbs
@@ -15,9 +15,9 @@
         appId: 'IIQKXJ786V',
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'headless',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
-        // debug: true // prevent it from closing on inspection.
+        container: '#searchBar',
+        searchParameters: { hitsPerPage: 12 },
+        debug: true // prevent it from closing on inspection.
     });
 
     function toggleDropDown () {
@@ -46,9 +46,9 @@
         appId: 'IIQKXJ786V',
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'saas',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
-        // debug: true // prevent it from closing on inspection.
+        container: '#searchBar',
+        searchParameters: { hitsPerPage: 12 },
+        debug: true // prevent it from closing on inspection.
     });
 
     function toggleDropDown () {
@@ -77,9 +77,9 @@
         appId: 'IIQKXJ786V',
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'saas',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
-        // debug: true // prevent it from closing on inspection.
+        container: '#searchBar',
+        searchParameters: { hitsPerPage: 12 },
+        debug: true // prevent it from closing on inspection.
     });
 
     function toggleDropDown () {
@@ -108,9 +108,9 @@
         appId: 'IIQKXJ786V',
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'saas',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
-        // debug: true // prevent it from closing on inspection.
+        container: '#searchBar',
+        searchParameters: { hitsPerPage: 12 },
+        debug: true // prevent it from closing on inspection.
     });
 
     function toggleDropDown () {
@@ -170,8 +170,8 @@
         appId: 'IIQKXJ786V',
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'dev_DOCS',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
+        container: '#searchBar',
+        searchParameters: { hitsPerPage: 12 },
         debug: true // prevent it from closing on inspection.
     });
 
@@ -201,8 +201,8 @@
         appId: 'IIQKXJ786V',
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'dev_DOCS',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
+        container: '#searchBar',
+        searchParameters: { hitsPerPage: 12 },
         debug: true // prevent it from closing on inspection.
     });
 
@@ -232,9 +232,9 @@
         appId: 'IIQKXJ786V',
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'dev_DOCS',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
-        // debug: true // prevent it from closing on inspection.
+        container: '#searchBar',
+        searchParameters: { hitsPerPage: 12 },
+        debug: true // prevent it from closing on inspection.
     });
 
     function toggleDropDown () {
@@ -263,9 +263,9 @@
         appId: 'IIQKXJ786V',
         apiKey: '450fd6db7d4e2f26607012f0d8683a29',
         indexName: 'landing_page',
-        inputSelector: '#searchBar',
-        algoliaOptions: { hitsPerPage: 12 },
-        // debug: true // prevent it from closing on inspection.
+        container: '#searchBar',
+        searchParameters: { hitsPerPage: 12 },
+        debug: true // prevent it from closing on inspection.
     });
 
     function toggleDropDown () {
