--- a/src/css/base.css
+++ b/src/css/base.css
@@ -237,7 +237,7 @@ footer.DocSearch-Footer div.DocSearch-Logo a {
 
 .DocSearch-Hit[aria-selected="true"] a {
   background-color: var(--color-primary-green) !important;
- }
+}
 
 .DocSearch-Dropdown li.DocSearch-Hit a:hover {
   background-color: var(--color-primary-green) !important;
@@ -263,6 +263,7 @@ footer.DocSearch-Footer div.DocSearch-Logo a {
 
 .DocSearch-Container {
   background-color: rgba(47, 79, 79, 0.397);
+  z-index: 420 !important
 }
 
 .DocSearch-Modal {
