--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -104,6 +104,7 @@
   --doc-font-color: var(--color-jet-50);
   --doc-font-size: inherit;
   --doc-font-size--desktop: calc(16 / var(--rem-base) * 1rem);
+  --doc-font-size--table: calc(15 / var(--rem-base) * 1rem);
   --doc-line-height: 1.6;
   --doc-margin: 0 auto;
   --doc-margin--desktop: 0 2rem;
