--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -334,3 +334,14 @@ html.is-clipped--nav {
 .nav .larger {
   font-size: larger;
 }
+
+.green-badge {
+  background: var(--color-primary-green);
+  border-radius: 0.5rem;
+  color: #fff;
+  display: inline-block;
+  font-size: smaller;
+  font-weight: 400;
+  line-height: 1.75;
+  padding: 0 0.5rem;
+}
