--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -4,6 +4,7 @@
   --color-primary-dark-green: #3a6305;
   --color-primary-light-green: #f5f8ea;
   --color-green-reflex: #7ecb13;
+  --color-green-reflex-latest: #7ecb13;
   --color-green-darker: #599900;
   --color-primary-plum: #652445;
   --color-primary-plum-light: #e27caf;
@@ -14,7 +15,7 @@
   --color-primary-blue: #4aace9;
   --color-primary-ocean-blue: #00adef;
   --color-orange: #f48a16;
-  --color-red: #ff562a;
+  --color-red: #f76733;
   --color-trials: #080a37;
   --color-white: #fff;
   --color-smoke-10: #fefefe;
