--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -1517,6 +1517,16 @@ input#monthPicker {
   border-radius: 5px;
   border: none;
   background-color: #f5f5f5;
+  cursor: pointer;
+  transition: 0.2s ease;
+}
+
+input#monthPicker:hover {
+  box-shadow: 1px 1px 6px -1px var(--color-primary-green) !important;
+}
+
+input#monthPicker i:hover {
+  cursor: pointer !important;
 }
 
 .ui-datepicker-month {
