--- a/src/css/base.css
+++ b/src/css/base.css
@@ -285,4 +285,25 @@ footer.DocSearch-Footer div.DocSearch-Logo a {
   color: var(--color-primary-dark-green);
   text-decoration: none !important;
 }
+
+.DocSearch-Button-Key {
+  display: none !important;
+}
+
+.DocSearch-Button-Key-new {
+  align-items: center;
+  background: linear-gradient(90deg, hsla(0, 0%, 92%, 1) 0%, hsla(0, 0%, 100%, 1) 50%, hsla(0, 0%, 95%, 1) 100%);
+  border-radius: 2px;
+  box-shadow: 1px 1px 1px 1px lightslategrey;
+  color: lightslategrey;
+  display: flex;
+  height: 18px;
+  justify-content: center;
+  margin-right: 2em;
+  position: relative;
+  padding: 0 0 2px 0;
+  border: 0;
+  top: -2px;
+  width: 20px;
+}
 /* } */
