--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -14,6 +14,12 @@
   --color-primary-yellow: #ffc226;
   --color-primary-blue: #4aace9;
   --color-primary-ocean-blue: #00adef;
+  --rebrand-color-primary-green: #068449;
+  --rebrand-color-primary-dark-green: #3a6305;
+  --rebrand-color-primary-light-green: #01b96c;
+  --rebrand-color-primary-teal: #02373f;
+  --rebrand-color-primary-light-blue: #549afc;
+  --rebrand-color-primary-dark-grey: #1e1f1c;
   --color-orange: #f48a16;
   --color-red: #f76733;
   --color-trials: #080a37;
