--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -17,6 +17,7 @@
   --rebrand-color-primary-green: #068449;
   --rebrand-color-primary-dark-green: #3a6305;
   --rebrand-color-primary-light-green: #01b96c;
+  --rebrand-color-primary-lime: #7ecb13;
   --rebrand-color-primary-teal: #02373f;
   --rebrand-color-primary-light-blue: #549afc;
   --rebrand-color-primary-dark-grey: #1e1f1c;
