--- a/src/partials/head-meta.hbs
+++ b/src/partials/head-meta.hbs
@@ -1,2 +1,6 @@
     {{!-- Add additional meta tags here --}}
- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<meta name="description" content="Explore Magnolia CMS documentation for comprehensive guides and resources on implementing, integrating, and using Magnolia effectively.">
+<meta property="og:title" content="Magnolia CMS Documentation">
+<meta property="og:description" content="Explore Magnolia CMS documentation for comprehensive guides and resources on implementing, integrating, and using Magnolia effectively.">
+<meta property="og:image" content="{{{uiRootPath}}}/img/meta-og-2023.jpg">
