--- a/src/partials/head-meta.hbs
+++ b/src/partials/head-meta.hbs
@@ -3,4 +3,4 @@
 <meta name="description" content="Explore Magnolia CMS documentation for comprehensive guides and resources on implementing, integrating, and using Magnolia effectively.">
 <meta property="og:title" content="Magnolia CMS Documentation">
 <meta property="og:description" content="Explore Magnolia CMS documentation for comprehensive guides and resources on implementing, integrating, and using Magnolia effectively.">
-<meta property="og:image" content="{{{uiRootPath}}}/img/meta-og-2023.jpg">
+<meta property="og:image" content="https://docs.magnolia-cms.com/welcome/_images/meta-og-2023.jpg">
