--- a/src/partials/head-icons.hbs
+++ b/src/partials/head-icons.hbs
@@ -1,1 +1,1 @@
-    <link rel="icon" href="{{{uiRootPath}}}/img/mgnl-favicon.png" type="image/png">
+    <link rel="icon" href="{{{uiRootPath}}}/img/mgnl-favicon-rounded.png" type="image/png">
