--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -25,6 +25,7 @@
 .doc h5,
 .doc h6 {
   color: var(--heading-font-color);
+  font-family: "Lora", sans-serif;
   font-weight: var(--alt-heading-font-weight);
   hyphens: none;
   line-height: 1.3;
@@ -37,7 +38,6 @@
 
 .doc > h1.page:first-child {
   font-size: 3rem;
-  color: var(--color-gray-dark);
   font-weight: 700;
   margin: 0.5rem 0;
 }
