--- a/src/css/footer.css
+++ b/src/css/footer.css
@@ -1,5 +1,5 @@
 footer.footer {
-  background-color: var(--color-gray-medium);
+  background-color: var(--rebrand-color-primary-sand);
   padding: 1.75rem 0 1.5rem;
   position: relative;
   z-index: var(--z-index-footer);
