--- a/src/css/nav.css
+++ b/src/css/nav.css
@@ -29,7 +29,7 @@
 }
 
 .nav {
-  background: var(--color-smoke-50);
+  background: var(--rebrand-color-primary-dew);
   position: relative;
   top: 0;
   height: var(--nav-height);
