--- a/src/css/vars.css
+++ b/src/css/vars.css
@@ -13,14 +13,18 @@
   --color-primary-light-grey: #f6f6f6;
   --color-primary-yellow: #ffc226;
   --color-primary-blue: #4aace9;
+  --color-digital-blue: #0569f9;
   --color-primary-ocean-blue: #00adef;
   --rebrand-color-primary-green: #068449;
   --rebrand-color-primary-dark-green: #3a6305;
   --rebrand-color-primary-light-green: #01b96c;
+  --rebrand-color-primary-dew: #e2f0e4;
   --rebrand-color-primary-lime: #7ecb13;
   --rebrand-color-primary-teal: #02373f;
+  --rebrand-color-primary-sand: #f0eee7;
   --rebrand-color-primary-light-blue: #549afc;
   --rebrand-color-primary-dark-grey: #1e1f1c;
+  --rebrand-color-sand: ;
   --color-orange: #f48a16;
   --color-red: #f76733;
   --color-trials: #080a37;
@@ -52,7 +56,7 @@
   --body-font-size--print: 0.9375em; /* 15px */
   --body-line-height: 1.15;
   --body-font-color: var(--color-jet-70);
-  --body-font-family: "Roboto", sans-serif;
+  --body-font-family: "Karla", sans-serif;
   --saas-land-font-family: "NationalCompressed", "Roboto", sans-serif;
   --body-font-weight-bold: 700;
   --monospace-font-family: "Roboto Mono", monospace;
@@ -66,7 +70,7 @@
   --navbar-background: white;
   --navbar-font-color: var(--color-primary-dark-green);
   --navbar_hover-background: var(--color-smoke-90);
-  --navbar-button-background: var(--color-primary-green);
+  --navbar-button-background: var(--color-digital-blue);
   --navbar-button-border-color: var(--panel-border-color);
   --navbar-button-font-color: var(--body-font-color);
   --navbar-menu-border-color: var(--panel-border-color);
@@ -77,7 +81,7 @@
   --nav-background: var(--panel-background);
   --nav-border-color: var(--color-gray-10);
   --nav-line-height: 1.35;
-  --nav-heading-font-color: var(--color-jet-30);
+  --nav-heading-font-color: var(--rebrand-color-primary-teal);
   --nav-muted-color: var(--color-gray-70);
   --nav-panel-divider-color: var(--color-smoke-90);
   --nav-secondary-background: var(--color-smoke-70);
@@ -116,7 +120,7 @@
   --doc-line-height: 1.6;
   --doc-margin: 0 auto;
   --doc-margin--desktop: 0 2rem;
-  --heading-font-color: var(--color-jet-80);
+  --heading-font-color: var(--rebrand-color-primary-green);
   --heading-font-weight: normal;
   --alt-heading-font-weight: var(--body-font-weight-bold);
   --section-divider-color: var(--panel-border-color);
